2008-01-16  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-coding-system): Revert.
	(w3m-form-input-textarea): Set w3m-form-input-textarea-coding-system to
	use in w3m-form-coding-system-accept-region-p.

2008-01-15  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-textarea-file-coding-system): New variable.
	(w3m-form-input-textarea-save): Use it.
	(w3m-form-input-textarea): Ditto.
	(w3m-form-input-textarea-coding-system): Abolish.

2008-01-11  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-filter.el (w3m-filter-iframe): New function.
	(w3m-filter-rules): Add rule for inserting link to the url iframe
	displays.

2008-01-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-coding-system-accept-region-p): Abolish.

	* w3m-ems.el (w3m-form-coding-system-accept-region-p): Use
	select-safe-coding-system if unencodable-char-position is not
	available.

	* w3m-xmas.el (w3m-form-coding-system-accept-region-p): Use
	decode-coding-string and encode-coding-string instead of
	unencodable-char-position; Only warn coding-system problem.

2008-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-decode-string): Don't replace +'s with spaces.

2007-12-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-coding-system-accept-region-p): New function.
	(w3m-form-input-textarea-save, w3m-form-input-textarea-set): Use it.

2007-12-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-goto-session): Go to the current w3m
	buffer in data of session.

2007-12-24  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-session.el (w3m-session-history-to-save): New function.
	(w3m-session-save): Also record history data.
	(w3m-session-automatic-save, w3m-session-deleted-save): Ditto.
	(w3m-session-select): Follow the format change.
	(w3m-session-goto-session): Also restore history data.

2007-12-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-tabmenu.el (w3m-tab-menubar-force-update): New function.